--- a/cadastra_produto.html
+++ b/cadastra_produto.html
@@ -31,7 +31,7 @@
 
           const dados = new FormData(form);
         
-          fetch('inserir_produto.php', {
+          fetch('inserir_produtos.php', {
             method: 'POST',
             body: dados
           })
